--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "mini-toastr": "^0.7.2",
-    "ontology-dapi": "^0.4.5",
+    "o3-dapi-core": "^0.0.8",
+    "o3-dapi-ont": "^0.0.5",
     "ontology-ts-debugger": "^0.3.10",
     "ontology-ts-sdk": "^0.9.8",
     "ontology-ts-vm": "^0.3.14",
     "popper.js": "^1.14.4",
     "raphael": "^2.2.7",
-    "save": "^2.3.2",
     "update": "^0.7.4",
     "vee-validate": "^2.0.6",
     "vue": "^2.5.16",
@@ -45,12 +45,12 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
